# tb

./: README.md  build_tb_and_launch_example.sh  install_ROS_build_launch.sh  install_robot_operating_system.sh
tb_abmap/: CMakeLists.txt  package.xml
tb_abmap_orig/: CMakeLists.txt  package.xml
tb_abstractmap/: CMakeLists.txt
tb_autoevade/: CMakeLists.txt  package.xml
tb_autoevade/launch/: autoevade.launch
tb_autoevade/src/: evasion.cpp  obstaclefinder.cpp  odomglobal.cpp
tb_autonomy_orig/: CMakeLists.txt  package.xml  rviz.rviz  tb_standalone_pathclustering_node.rviz
tb_autonomy_orig/launch/: clusteringtester.launch  standalone_clusteringtester.launch  test_spherefull.launch
tb_autonomy_orig/planners/: dwa_local_planner_params.yaml
tb_autonomy_orig/planners/src/: assembly.cpp  fsm.cpp  gridpath.cpp  navigator.cpp
tb_autonomy_orig/planners/src/utvalgt_underlag/: scoregrids.cpp
tb_autonomy_orig/resources/: elevator_client.cpp  side.cpp
tb_autonomy_orig/resources/edto/: side.cpp
tb_autonomy_orig/src/: abmap_requester.cpp  pathclustering_with_client.cpp  pathclustering_with_client2.cpp  standalone_pathclustering.cpp  standalone_pathclustering_ffill.cpp  test_requester.cpp
tb_autonomy_orig/src/autonomy/: handler_new.cpp  target.cpp  target_old.cpp  targeter.cpp
tb_autonomy_orig/src/clusterwork_backup/: standalone_cluster.cpp
tb_autonomy_orig/src/important/: autonomy_targeting.cpp  mbfeedback.cpp  pathclustering_down_with_client.cpp  pathclustering_side_with_client.cpp
tb_autonomy_orig/src/unused/: path_planner.cpp
tb_baghelp/: CMakeLists.txt  package.xml
tb_baghelp/launch/: baghelp.launch
tb_baghelp/src/: baghelp.cpp
tb_cmd/: CMakeLists.txt  package.xml
tb_cmd/launch/: cmd.launch
tb_cmd/src/: cmd.cpp  cmd_actuate.cpp  cmd_elevation.cpp  cmd_exequte.cpp  cmd_exequte_pid.cpp  cmd_minimal.cpp  cmd_setpoint.cpp  cmd_setpoint_path.cpp
tb_debug/: CMakeLists.txt  package.xml  tb_standalone_pathclustering_node.rviz
tb_debug/launch/: clusteringtester.launch  standalone_clusteringtester.launch
tb_debug/planners/: global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
tb_debug/planners/src/: 18jul_navigator_WORKING_dontwrite.cpp  cmd.cpp  navi.cpp  navigator (copy).cpp
tb_debug/resources/: down.cpp  navigator.cpp
tb_debug/resources/edto/: down (copy).cpp  down.cpp
tb_debug/src/: clustering_visualization.cpp
tb_edtoauto/: CMakeLists.txt  package.xml
tb_edtoauto/launch/: edtoauto.launch  edtoray.launch
tb_edtoauto/src/: down_auto.cpp  sphere_auto.cpp
tb_mbclient/: CMakeLists.txt  package.xml
tb_mbclient/launch/: mbclient.launch
tb_mbclient/src/: mbclient.cpp  mbclient_pathplan.cpp
tb_msgsrv/: CMakeLists.txt  package.xml
tb_msgsrv/msg/: PathsStamped.msg
tb_msgsrv/srv/: UpdateSidesSrv.srv  oct2img2.srv  oct2imgdwn.srv  oct2imgsidedown.srv
tb_perception/: CMakeLists.txt  package.xml
tb_perception/src/: ffillldemo.cpp  initialscan.cpp  obst.cpp  perception_longrange.cpp  perception_shortrange.cpp
tb_robot/: CMakeLists.txt  package.xml
tb_robot/launch/: robot.launch
tb_robot/launch/include/: m600_description.launch
tb_robot/param/: pantilt_tilt.yaml  tilt.yaml
tb_robot/robots/: m600.xacro  m600_sdunk_vlptilt_astradown.urdf.xacro
tb_robot/src/: admin.cpp  odomglobal.cpp  tf.cpp
tb_robot/urdf/: astra.urdf.xacro  lidarlite.urdf.xacro  pan_tilt.urdf.xacro  slamdunk.urdf.xacro  velodyne.urdf.xacro  velodyne_virtuals.urdf.xacro
tb_simulate/: CMakeLists.txt  package.xml
tb_simulate/launch/: simulate.launch  simulate_nocloud.launch  simulate_premade_octomap.launch
tb_simulate/scripts/: tb_heightimg2pointcloud_node.py  tb_simulate_surroundcloud_node.py
tb_simulate/src/: actuatorsresponse.cpp  djiresponse.cpp  heightimg_to_sensor_pointcloud.cpp  octrepub.cpp
tb_simulate_hardware/: CMakeLists.txt  package.xml
tb_simulate_hardware/launch/: simulate_hardware.launch
tb_simulate_hardware/src/: actuators.cpp  drone.cpp
tb_simulate_perception/: CMakeLists.txt  package.xml
tb_simulate_perception/launch/: display_octomap_from_image.launch  premade_octomap.launch  without_premade_octomap.launch
tb_simulate_perception/scripts/: tb_img2fullcloud_node.py  tb_img2sensor_node.py
tb_simulate_perception/src/: img2sensor.cpp  oct2sensor.cpp
tb_targeters/: CMakeLists.txt  debug.rviz  package.xml  test.rviz
tb_targeters/launch/: bag.launch  edtoauto.launch  tb_premade_octomap.launch  tb_without_premade_octomap.launch  test.launch  test_standalone.launch  test_vis.launch
tb_targeters/launch/include/: filters.launch.xml  filters_base.launch.xml  filters_hilo0.launch.xml  mb.launch.xml
tb_targeters/src/: clusters.cpp  clusters2.cpp  clustersffill.cpp  follow_hori.cpp  mandag_uke38_test_working_lvl.cpp  pathclusters.cpp  pathclusters_down.cpp  side2d.cpp  side_auto.cpp  targeter.cpp  test.cpp  test5.cpp  test_backup.cpp  test_standalone.cpp  test_working_buildings.cpp  vis.cpp
tb_targeters/src/underlag/: building_finder.cpp  client.cpp  pathclusters.cpp  poly_auto.cpp  test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test_1.cpp  test_2.cpp
tb_trajectorywriter/: CMakeLists.txt  package.xml
tb_trajectorywriter/launch/: trajectorywriter.launch
tb_trajectorywriter/src/: trajectorywriter.cpp
underlag/tb_brain/: CMakeLists.txt  package.xml
underlag/tb_brain/src/: brain.cpp  brainactivity.cpp  pathcreation.cpp  pathcreation_old.cpp  pathutilizer.cpp
underlag/tb_brain/src/deprecated/: fsm0.cpp  fsm2.cpp  fsm_building.cpp  fsm_creator.cpp  fsm_creator2.cpp  fsm_objects.cpp  fsm_pathcreator_bckup.cpp  fsm_pathutilizer.cpp  fsm_perception02.cpp  global0.cpp  global1.cpp  global2.cpp  grid.cpp  path_creator.cpp  pathproc0.cpp  pathproc_bckup.cpp  pathproc_bckup2.cpp  pathproc_minimal.cpp
underlag/tb_brain/src/pathcreators/: fsm_path1.cpp  fsm_path2.cpp  fsm_path3.cpp
underlag/tb_brain/src/tomerge/: fsm_creator.cpp  fsm_path.cpp  fsm_pathcomplex.cpp
underlag/tb_brain/src/underlag/: fsm_building.cpp  fsm_building_bckup.cpp  fsm_pathcreator.cpp  fsm_perception.cpp
(+126 files in other folders)
